--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=postgres
 quarkus.datasource.password=1234
 
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5434/quarkus-social
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5434/quarkussocial
 quarkus.datasource.jdbc.max-size=16
