--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,15 @@
+#DEV
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=postgres
 quarkus.datasource.password=1234
-
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5434/quarkussocial
 quarkus.datasource.jdbc.max-size=16
+
+#TEST
+%test.quarkus.datasource.db-kind=h2
+%test.quarkus.datasource.username=sa
+%test.quarkus.datasource.password=
+%test.quarkus.datasource.jdbc.url=jdbc:h2:mem:quarkussocial
+%test.quarkus.datasource.jdbc.max-size=16
+%test.quarkus.hibernate-orm.database.generation=drop-and-create
+%test.quarkus.hibernate-orm.log.sql=true
