--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ quarkus.datasource.jdbc.max-size=16
 %test.quarkus.datasource.jdbc.max-size=16
 %test.quarkus.hibernate-orm.database.generation=drop-and-create
 %test.quarkus.hibernate-orm.log.sql=true
+
+qurakus.swagger-ui.always-include=true
